--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,10 @@
         android:theme="@style/AppTheme">
         <activity android:name=".HelperActivity" />
             <activity android:name=".MorseActivity" />
+                <activity android:name=".MensagensActivity"/>
         <activity android:name=".MainMenuActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"   />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
